tests/parser/tests/cases/should_fail/double_colon_in_map_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:15
1 |   k := map!{ 1::2 };
  |                 ^ here
  = note: Expected an identifier.
